--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 # Corrections? Improvements? Create a GitHub issue:
 # http://github.com/RailsApps/rails-composer/issues
 #----------------------------------------------------------------------------
-
+.byebug_history
 # bundler state
 /.bundle
 /vendor/bundle/
